mongodb-deployment.yml
# mongodb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mern-mongodb
  template:
    metadata:
      labels:
        app: mern-mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mern-mongodb
spec:
  ports:
  - port: 27017
  selector:
    app: mern-mongodb
